--- a/Fotografía.html
+++ b/Fotografía.html
@@ -67,7 +67,7 @@
 									<img src="images/foto3.PNG" class="image" alt=""  />
 								</span>
 								<span class="image">
-									<img src="images/foto1.PNG" class="image" alt=""  />
+									<img src="images/foto1.jpg" class="image" alt=""  />
 								</span>
 								<span class="image">
 									<img src="images/foto8.PNG" class="image" alt=""  />
@@ -86,10 +86,10 @@
 							</section>
 							<section>
 								<span class="image">
-									<img src="images/foto7.PNG" class="image" alt=""  />
+									<img src="images/foto7.jpg" class="image" alt=""  />
 								</span>
 								<span class="image">
-									<img src="images/foto2.PNG" class="image" alt=""  />
+									<img src="images/foto2.jpg" class="image" alt=""  />
 								</span>
 								<span class="image">
 									<img src="images/foto9.PNG" class="image" alt=""  />
