--- a/Diseño.html
+++ b/Diseño.html
@@ -92,7 +92,7 @@
 								</section>
 								<section>
 									<a href="index.html" class="image">
-										<img src="images/desarrolloproductosimagen.PNG" alt="" data-position="top center" />
+										<img src="images/desarrolloproductosimagen.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
