--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<h1>iDream Studios</h1>
 							</header>
 							<div class="content">
-								<p>Donde la creatividad, crea realidad</p>
+								<p>Creatividad crea realidad</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Explorar</a></li>
 								</ul>
