--- a/index.html
+++ b/index.html
@@ -127,11 +127,7 @@
 								<h1>¿Quiénes somos?</h1>
 								<br>
 								<div class="content">
-									<p>En iDream Studios hacemos equipo contigo para darle vida a tus ideas. <br> 
-										Nos mueve transformar tus emociones en proyectos reales, respetando lo 
-										que quieres transmitir y trabajando a tu lado. <br> Somos un grupo 
-										creativo que busca cambiar las reglas de cómo hacer marketing con 
-										honestidad, empatía y mucha convicción.
+									<p>En iDream Studios hacemos equipo contigo para darle vida a tus ideas. Nos mueve transformar tus emociones en proyectos reales, respetando lo que quieres transmitir y trabajando a tu lado. Somos un grupo creativo que busca cambiar las reglas de cómo hacer marketing con honestidad, empatía y mucha convicción.
 									</p>
 									
 								</div>
