--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 								<h1>¿Quiénes somos?</h1>
 								<br>
 								<div class="content">
-									<p>En iDream Studios hacemos equipo contigo <br> para darle vida a tus ideas.<br> Nos mueve transformar tus emociones en proyectos reales, <br> respetando lo que quieres transmitir y trabajando a tu lado.<br> Somos un grupo creativo que busca cambiar <br> las reglas de cómo hacer marketing <br> con honestidad, empatía y mucha convicción.
+									<p>En iDream Studios hacemos equipo contigo <br> para darle vida a tus ideas.<br> Nos mueve transformar tus emociones <br> en proyectos reales, respetando lo que <br> quieres transmitir y trabajando a tu lado.<br> Somos un grupo creativo que busca cambiar <br> las reglas de cómo hacer marketing <br> con honestidad, empatía y mucha convicción.
 									</p>
 									
 								</div>
